main.css
/*

	Author: Kelly Ann McNamara;
	Date Started: May 21st, 2017;
	Project: J&F Equipment Sales;

	_________________________________________________

	INDEX
	01. Attributes
	02. Nav
	03. Opening
	04. Home Page Callouts
	05. Footer
	00. ...
	00. ...
	00. ...
	00. ...
	00. ...
	00. ...
	00. ...
	00. ...
	00. ...
	00. ...

	_________________________________________________

	COLOURS
	white: #fff;
	dark-grey: #231f20;
	smoke: #f1f3f4;
	mid-grey: #818285;
	red: #a41e22;

*/

/* =============== 01. Attributes =============== */


* {
    margin: 0 auto;
}
*, *::before, *::after {
    box-sizing: inherit;
}
html {
    font-size: 100%;
    box-sizing: border-box;
}
body {
    font-size: 62.5%;
    margin: 0 auto;
    font-family: 'Lato', "Helvetica Neue", Helvetica, sans-serif;
    text-rendering: geometricPrecision;
}
.clear {
    float: none;
    clear: both;
}
#sidebar {
    float: left;
    height: 100vh;
    width: 160px;
    position: fixed;
}
#sidebar h1 {
    font-size: .5em;
    color: #fff;
}
main {
    margin: 0 auto;
    position: relative;
    float: left;
    width: calc(100vw - 160px);
    margin-left: 160px;
    background: #f1f3f4;
}
.wrapper {
    max-width: 1025px;
    padding: 0px 30px;
}
p {
    color: #231f20;
    font-size: 1.4em;
    font-weight: 400;
    line-height: 20px;
}

/* =============== 02. Nav =============== */

#nav-logo {
    background: #fff;
    text-align: center;
    padding: 45px 25px;
}
#nav-links {
    background: #231f20;
    height: calc(100vh - 166px);
}
#nav-links ul {
    list-style: none;
    text-align: center;
    padding: 0px;
    padding-top: 40px;
}
#nav-links ul li a{
    color: #f1f3f4;
    text-transform: uppercase;
    text-decoration: none;
    font-size: 1.2em;
    line-height: 35px;
    transition: .5s ease all;
}
#nav-links ul li a:hover, #nav-links ul li a:active, #nav-links ul li a:focus {
    outline: none;
    color: #818285;
}
#nav-social {
    text-align: center;
}
#nav-social svg {
    margin-right: 10px;
    margin-top: 21px;
    height: 15px;
}
#nav-social #fb {
    height: 17px;
}
#nav-social .icon-fill {
    transition: 1s ease all;
}
#nav-social svg:hover, #nav-social svg:active, #nav-social svg:focus {
    outline: none;
}
#nav-social .icon-fill:hover, #nav-social .icon-fill:active, #nav-social .icon-fill:focus {
    fill: #818285;
}

/* =============== 03. Opening =============== */

#opening {
    background: #f1f3f4;
    height: 100vh;
    max-height: 795px;
    min-height: 650px;
}
#opening h2 {
    color: #231f20;
    text-transform: uppercase;
    font-size: 6em;
    font-weight: 900;
    line-height: 75px;
    max-width: 433px;
    padding-top: 153px;
    margin-left: 15%;
}
#opening img {
    margin-top: -200px;
    margin-left: 150px;
    max-width: 1000px;
    transition: .5s ease all;
}

/* =============== 04. Home Page Callouts =============== */

#col-content {
    max-width: 1400px;
}
.col-3 {
    width: 33.333%;
    float: left;
    background: #fff;
    padding: 50px 20px 35px;
    min-height: 205px;
}
.col-3:nth-child(2) {
    background: #ecedee;
}
.col-3 p {
    max-width: 360px;
}

/* =============== 05. Footer =============== */

footer {
    width: 100%;
    background: #818285;
    padding: 45px 20px;
}
footer h3 {
    color: #fff;
    font-weight: 900;
    font-size: 1.4em;
    letter-spacing: 1px;
    padding-bottom: 45px;
}
footer p a {
    color: #fff;
    font-weight: 400;
    font-size: .9em;
    letter-spacing: 1px;
    text-decoration: none;
    line-height: 18px;
    transition: .25s ease all;
}
footer p a:hover, footer p a:active, footer p a:focus {
    outline: none;
    color: #a41e22;
}
#footer-content {
    max-width: 1000px;
}

#contact-info, #contact-form {
    float: left;
}
#contact-info {
    width: 33.333%;
}
#contact-form {
    width: 66.666%;
}
#contact-form .col-2 {
    width: 50%;
    float: left;
    padding-right: 10px;
}
#contact-form label, #contact-form label:focus {
    font-size: .25em;
    color: #818285;
    outline: none;
    position: absolute;
    opacity: 0.1;
}
#contact-form input, #contact-form textarea {
    width: 100%;
}
#contact-form input[type="text"], #contact-form textarea {
    background: none;
    border: 1px #fff solid;
    padding: 5px 7px;
    color: #fff;
    font-size: 1.2em;
    margin-bottom: 5px;
    transition: .35s ease all;
}
#contact-form input[type="text"]::-webkit-input-placeholder, #contact-form textarea::-webkit-input-placeholder { /* Chrome/Opera/Safari */
    color: #fff;
}
#contact-form input[type="text"]::-moz-placeholder, #contact-form textarea::-moz-placeholder { /* Firefox 19+ */
    color: #fff;
}
#contact-form input[type="text"]:-ms-input-placeholder, #contact-form textarea:-ms-input-placeholder { /* IE 10+ */
    color: #fff;
}
#contact-form input[type="text"]:-moz-placeholder, #contact-form textarea:-moz-placeholder { /* Firefox 18- */
    color: #fff;
}
#contact-form input[type="text"]:hover, #contact-form textarea:hover, #contact-form input[type="text"]:active, #contact-form textarea:active, #contact-form input[type="text"]:focus, #contact-form textarea:focus {
    outline: none;
    box-shadow: inset #fff 0px -3px 0px 0px;
}
#contact-form textarea {
    height: 59px;
}
#contact-form input[type="submit"] {
    border-radius: 0%;
    background: #fff;
    color: #818285;
    text-align: left;
    border: none;
    padding: 6px 7px;
    font-size: 1.2em;
    margin-top: -2px;
    transition: 1s all ease;
}
#contact-form input[type="submit"]:hover, #contact-form input[type="submit"]:active, #contact-form input[type="submit"]:focus {
    outline: none;
    box-shadow: inset #a41e22 0px -4px 0px 0px;
    color: #a41e22;
}

/* =============== 00. Family Owned =============== */

#family-owned {
    background-image: url("opt-imgs/family-bg2.png");
    background-size: auto;
    background-position: right;
    background-repeat: no-repeat;
    padding: 115px 20px 55px;
    max-width: 925px;
    margin-top: 105px;
}
#personal {
    background-image: url("opt-imgs/personal-bg.png");
    background-size: auto;
    background-position: left;
    background-repeat: no-repeat;
    padding: 135px 20px 155px;
    max-width: 925px;
    margin-top: 50px;
}
#customer {
    background-image: url("opt-imgs/customer-bg.png");
    background-size: auto;
    background-position: right;
    background-repeat: no-repeat;
    padding: 125px 20px 200px;
    max-width: 925px;
}
#family-owned h2, #personal h2, #customer h2 {
    color: #231f20;
    font-size: 4em;
    font-weight: 900;
    text-transform: uppercase;
    padding-bottom: 30px;
}
#family-owned h2, #family-owned p, #customer h2, #customer p {
    max-width: 400px;
    margin-left: 0px;
}
#personal h2, #personal p {
    max-width: 400px;
    margin-right: 0px;
}
#family-owned p, #personal p, #customer p {
    font-weight: 700;
}
.about-content {
    max-width: 960px;
}

/* =============== 00. Media Query =============== */

@media screen and (max-width: 1104px) {
    .col-3 {
        min-height: 245px;
    }
}
@media screen and (max-width: 1024px) {
    #opening img {
        margin-top: -170px;
    }
}
@media screen and (max-width: 915px) {
    #opening img {
        margin-top: -135px;
        margin-left: 115px;
    }
    .col-3 {
        min-height: 300px;
    }
}
@media screen and (max-width: 820px) {
    #opening img {
        margin-top: -100px;
    }
    .col-3 {
        width: 100%;
        height: auto;
        min-height: inherit;
    }
}
@media screen and (max-width: 745px) {
    #opening img {
        margin-top: -75px;
    }
    #contact-info {
        width: 100%;
    }
    #contact-form {
        width: 100%;
        padding-top: 40px;
    }
}
@media screen and (max-width: 645px) {
    #opening img {
        margin-top: -50px;
        margin-left: 90px;
    }
}
@media screen and (max-width: 524px) {
    #opening img {
        margin-top: 0px;
        margin-left: 50px;
    }
    #contact-form .col-2 {
        width: 100%;
    }
}

